add test code when throw error

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 
       paymentBtn.addEventListener("click", function () {
         optpay.requestPayment({
-          method: "CARD",
+          method: "",
           amount: 1000,
           orderId: "xxxxxxx-xxxxxx-xxxx-xxxx",
           orderName: "테스트주문",
